--- a/weui.wxss
+++ b/weui.wxss
@@ -50,7 +50,8 @@ icon {
 }
 
 .weui-cells_after-title {
-  margin-top: 0
+  margin-top: 0;
+
 }
 
 .weui-cells__tips {
@@ -69,7 +70,8 @@ icon {
   display: flex;
   -webkit-box-align: center;
   -webkit-align-items: center;
-  align-items: center
+  align-items: center;
+  
 }
 
 .weui-cell:before {
@@ -101,7 +103,9 @@ icon {
 .weui-cell__bd {
   -webkit-box-flex: 1;
   -webkit-flex: 1;
+  
   flex: 1
+  
 }
 
 .weui-cell__ft {
@@ -216,7 +220,7 @@ icon {
 
 .weui-textarea {
   display: block;
-  width: 100%
+  width: 100%;
 }
 
 .weui-textarea-counter {
