--- a/app.wxss
+++ b/app.wxss
@@ -1,7 +1,7 @@
 /**app.wxss**/
 @import 'weui.wxss';
 .container {
-  height: 30%;
+  height: 50%;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -11,24 +11,13 @@
 } 
 /* botton的基本样式 */
 
-.scanBtn{
-  margin-top:30rpx;
-  width:30%;
-  height:80rpx;
-  line-height: 80rpx;
-  display:flex;
-  justify-content:center;
-  align-items:center;
-  font-size:40rpx;
-  font-weight:bold;
-  }
 
 .submitBtn{
-margin-top:0rpx;
-width:80%;
-height:65rpx;
-line-height: 65rpx;
-display:flex;
+margin-top:5rpx;
+width:140rpx;
+height:55rpx;
+line-height: 55rpx;
+display:block;
 justify-content:center;
 align-items:center;
 font-size:32rpx;
@@ -45,4 +34,24 @@ background:#ff9537 !important;
 .submitBtn.gray{
 color:#fff !important;
 background:#d9d9d9 !important;
+}
+.weui-grid__label1 {
+  margin-top: 3px;
+  display: block;
+  text-align: center;
+  color: #000;
+  font-size: 18px;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  overflow: hidden
+}
+.weui-grid__label2 {
+  margin-top: 3px;
+  display: block;
+  text-align: center;
+  color: rgb(133, 131, 131);
+  font-size: 14px;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  overflow: hidden
 }
