--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -1,19 +1,40 @@
 <!--index.wxml-->
-<view class="container">
-  <text class="welcome">六和居川味火锅店欢迎您</text>
-  <image src="../../images/logo.png" style="width: 200rpx; height: 150rpx;"></image>
-  <button class="scanBtn" type='primary' bindtap="to_menu">扫码点餐</button>
-  <!-- <button class="comfirm-button" type='default' bindtap="to_menu_trick">4餐厅1桌</button> -->
-</view>
-  <view class="page__bd">
-    <view class="weui-grids">
-    <block wx:for="{{grids}}" wx:key="*this">
-      <navigator url="" class="weui-grid" hover-class="weui-grid_active" data-index='{{index}}' bindtap='onNavigatorTap'>
-        <!-- <image class="weui-grid__icon" src="../../images/logo.png" /> -->
-        <button disabled='{{!item.status}}' class="submitBtn {{item.status ? 'active' : 'gray'}}" bindtap="to_menu_trick" data-id="{{item.table_id}}" data-status="{{item.status}}" data-tablename="{{item.table_name}}">{{book}}</button>
-        <view class="weui-grid__label1">{{item.table_name}}</view>
-        <view class="weui-grid__label2">{{item.station}}</view>
-      </navigator>
-    </block>
+<view class="container1">
+
+    <view class="weui-navbar">
+      <block wx:for="{{scrollViewTitle}}" wx:key="*this">
+        <view class="{{currentIndex==index?'selected':'normal'}}" id="{{index}}" bindtap="changeCurrentIndex">{{item}}</view>
+      </block>
     </view>
-  </view>
+    <view class="weui-grids1" hidden="{{hideGridsModal}}">
+      <block wx:for="{{grids}}" wx:key="*this">
+        <navigator url="" class="weui-grid" hover-class="weui-grid_active" data-index='{{index}}'>
+          <button disabled='{{!item.status}}' class="submitBtn {{item.status ? 'active' : 'gray'}}" bindtap="to_menu_trick" data-id="{{item.table_id}}" data-status="{{item.status}}" data-tablename="{{item.table_name}}" data-station="{{item.station}}">{{book}}</button>
+          <view class="weui-grid__label1">{{item.table_name}}</view>
+          <view class="weui-grid__label2">{{item.station}}</view>
+        </navigator>
+      </block>
+    </view>
+
+    <view class="scan-page" hidden="{{hideScanModal}}">
+      <image class="scan-img" src="../../images/logo.png"></image>
+      <button class="scanBtn" type='primary' bindtap="to_scan">桌台扫码点餐</button>
+    </view>
+
+
+</view> 
+
+
+<view class="people-mum" hidden="{{hideNumModal}}">
+    <view class="mask"></view>
+    <text class='lay-close' bindtap='showTable'>x</text>
+    <view class="order_items">您预订的是：{{table_name}}，</view>
+    <view class="order_items">{{table_station}}，请选择您的就餐人数:</view>
+    <view class="weui-grids2">
+          <block wx:for="{{peploenum}}" wx:key="*this">
+            <button class="comfirm-button" data-peploenum="{{item}}"  bindtap="select_num">{{item}}</button>
+          </block>
+          <div class="item-empty"></div>
+    </view>
+</view>
+
