--- a/pages/menu/menu.wxml
+++ b/pages/menu/menu.wxml
@@ -1,21 +1,4 @@
 <!--index.wxml-->
-<!-- <template name="menuItem" >
-  <view class="weui-cells">
-       <view>
-            <image class="weui-cell1" src="{{image}}" style="width: 150rpx; height: 150rpx;"></image>
-        </view>
-        <view class="weui-cell2">
-            <view class="food-name">{{food_name}}</view>
-            <view class="food-description">{{description}}</view>                        
-        </view>
-        <view class="weui-cell3">
-          <view class="food-price">￥{{price}}</view> -->
-          <!-- <text> \n </text> -->
-          <!-- <image src="../../images/add.png" style="width: 50rpx; height: 50rpx;" data-index="{{index}}" id="{{id}}" bindtap='addDish'></image>
-        </view>
-  </view>
-</template> -->
-
 <view class="page">
   <view class="page__bd">
      <!-- <view class="weui-tab"> -->
@@ -64,38 +47,35 @@
         </scroll-view>
       </view>
       <view class="cart-detail" hidden="{{hideModal}}">
-          <view class="mask" bindtap="hideCartDetail"></view>	
-            <scroll-view scroll-y='true' class="cart-list" style="height: 75vh;">
-              <!-- <scroll-view scroll-y='true'> -->
-                <text class='lay-close' bindtap='showCart'>x</text>
-                <view class="order_items">菜品清单-{{tableInfo.table_name}}</view>
-                <view class="item" wx:for="{{cartList}}" wx:for-index="index" wx:for-item="itemName" wx:key="index">              
-                      <view class="name">{{itemName.food_name}}</view>
-                      <view class="total">￥{{itemName.price|Int}}</view>
-                      <view class="minus-btn" data-dishs="{{itemName}}" bindtap="tapMinusCart">-</view>
-                      <view class="num">{{itemName.num}}</view>
-                      <view class="add-btn" data-dishs="{{itemName}}" bindtap="tapAddCart">+</view>
-                </view>
-                <button class="comfirm-button1" type="default" bindtap="to_submit">下单</button>
-                <view>
-                </view>
-                <view>
-                </view>
+        <view class="mask" bindtap="hideCartDetail"></view>	
+          <scroll-view scroll-y='true' class="cart-list" style="height: 75vh;">
+            <!-- <scroll-view scroll-y='true'> -->
+              <text class='lay-close' bindtap='showCart'>x</text>
+              <view class="order_items">菜品清单-{{tableInfo.table_name}}</view>
+              <view class="item" wx:for="{{cartList}}" wx:for-index="index" wx:for-item="itemName" wx:key="index">              
+                    <view class="name">{{itemName.food_name}}</view>
+                    <view class="total">￥{{itemName.price|Int}}</view>
+                    <view class="minus-btn" data-dishs="{{itemName}}" bindtap="tapMinusCart">-</view>
+                    <view class="num">{{itemName.num}}</view>
+                    <view class="add-btn" data-dishs="{{itemName}}" bindtap="tapAddCart">+</view>
+              </view>
+              <button class="comfirm-button1" type="default" bindtap="to_submit">下单</button>
+              <view>
+              </view>
+              <view>
+              </view>
+          </scroll-view>
+      </view>
 
-            </scroll-view>
- 
-          <!-- </view> -->
+      <view class="bar">
+        <view class="cart" bindtap="handleCart">
+          <image src="../../images/cart.png" style="width: 100rpx; height: 100rpx;">
+            <span class="cart-num" wx:if="{{totalNum!=0}}">{{totalNum}}</span>
+          </image>
+          <view class='cart-price'>购物车已点合计 ￥{{totalPrice}}元</view>
+          <!-- <button class="comfirm-button" type='primary' bindtap="to_submit">确定</button> -->
         </view>
-
-        <view class="bar">
-          <view class="cart" bindtap="handleCart">
-            <image src="../../images/cart.png" style="width: 100rpx; height: 100rpx;">
-              <span class="cart-num" wx:if="{{totalNum!=0}}">{{totalNum}}</span>
-            </image>
-            <view class='cart-price'>共计 ￥{{totalPrice}}</view>
-            <!-- <button class="comfirm-button" type='primary' bindtap="to_submit">确定</button> -->
-          </view>
-        </view>
+      </view>
   </view>
 </view>
 
