--- a/pages/submit/submit.wxml
+++ b/pages/submit/submit.wxml
@@ -17,34 +17,34 @@
 </template>
 
 <view class="page">
-    <view class="page__bd">
-        <view class="weui-panel weui-panel_access">
-            <view class="weui-panel__hd">订单详情</view>
-              <scroll-view class="weui-cells" scroll-y="true">
-                <view wx:for="{{order}}" wx:key="order_block">
-                  <template is="orderItem" data="{{...item}}"/>
-                </view> 
-                <view class="total">总计： ￥<text class="price_num">{{totalPrice}}</text>元</view>
-                <view class="weui-cells__title">特别提示:请您仔细确认所点菜品，订单提交后只能在饭店没有加工的情况下修改！</view>
-                <view class="weui-cells weui-cells_after-title">
-                  <view class="weui-cell">
-                      <view class="weui-cell__bd">
-                          <textarea class="weui-textarea" placeholder="请输入联系电话" placeholder-style="font-size:36rpx" bindinput="inputMobile" style="height: 1.1em" />
-                      </view>                
-                  </view>                
-                  <view class="weui-cell">
-                      <view class="weui-cell__bd">
-                          <textarea class="weui-textarea" placeholder="请输入对菜品的要求" placeholder-style="font-size:36rpx" bindinput="inputNotes" style="height: 3.3em" />
-                      </view>                
-                  </view> 
-                  <view class="weui-cell">            
-                  </view> 
-                  <button class='comfirm-button' type="primary" bindtap="submitOrder">提交订单</button>
-                </view> 
-                
-              </scroll-view>
-        </view>          
-    </view>
-
-
+  <view>
+    <view class="weui-panel__hd">订单详情</view>
+    <scroll-view class="weui-cells" scroll-y="true">
+      <view wx:for="{{order}}" wx:key="order_block">
+        <template is="orderItem" data="{{...item}}"/>
+      </view> 
+    <view class="total">总计： ￥<text class="price_num">{{totalPrice}}</text>元</view>
+    <view class="weui-cells__title">特别提示:请您仔细确认所点菜品，订单提交后只能在饭店没有加工的情况下修改！</view>
+    </scroll-view> 
+    <view>
+      <view class="weui-cell" hidden="{{hidePhoneNum}}">
+          <view class="weui-cell__bd">
+              <textarea type="number" maxlength='11' class="weui-textarea" placeholder="请输入联系电话" placeholder-style="font-size:36rpx" bindblur="inputMobile" style="height: 1.5em" />
+          </view>                
+      </view>                
+      <view class="weui-cell">
+          <view class="weui-cell__bd">
+              <textarea maxlength='50' class="weui-textarea" placeholder="请输入对菜品的要求" placeholder-style="font-size:36rpx" bindinput="inputNotes" style="height: 3.3em" />
+              <view>
+                <text style="float: right; font-size: 36rpx; color: #b2b2b2;">{{currentWord}}/{{maxWord}}(最多可输入50字)</text>
+              </view>
+          </view>                
+      </view> 
+      
+      <view class="weui-cell">          
+      </view> 
+      
+    </view>      
+  </view> 
+  <button disabled="{{status}}" class='comfirm-button' type="primary" bindtap="submitOrder">提交订单</button>         
 </view>
