--- a/pages/submit/submit.wxss
+++ b/pages/submit/submit.wxss
@@ -1,26 +1,10 @@
 .weui-panel__hd {
   text-align:center;
+  right: 8px;
 
 }
 .weui-cells {
   display: inline;
-
-}
-
-.order_detail {
-  height: 30px;
-  border-bottom: 1px solid #9aa6c3;
-}
-.order_detail_txt {
-  margin: 10px 10px 4px 10px;
-  height: 20px;
-  text-align: left;
-  color: #828282;
-  font-size: 30rpx;
-}
-.w {
-  height: 726rpx;
-  width: 100%;
 }
 
 .sub-cart-list {
@@ -91,38 +75,6 @@
   bottom: 50rpx;
 }
 
-.ps {
-  padding: 20rpx 20rpx;
-  border-top: 20rpx solid #edeff1;
-  font-size: 30rpx;
-  height: 180rpx;
-  width: 100%;
-}
-.ps text {
-  color: #828282;
-  font-size: 30rpx;
-}
-.ps_txt {
-  padding: 10rpx 10rpx;
-  width: 690rpx;
-  height: 160rpx;
-  background: #E8E8E8;
-  font-size: 30rpx;
-  line-height: 47rpx;
-  position: relative;
-  top: 20rpx;
-}
-
-.bottom {
-  position: fixed;
-  bottom: 0;
-  left: 0;
-  width: 100%;
-  height: 86rpx;
-  background-color: #363636;
-  color: white;
-}
-
 .price {
   width: 60%;
   /* float: left; */
@@ -138,22 +90,14 @@
   margin-top: 30rpx;
 }
 
-.pay button {
-  width: 30%;
-  top:2px;
-  right:2px;
-  float: right;
-  height: 75rpx;
-  background:#0b0;
-  color: white;
-  font-size: 35rpx;
-}
 
 .comfirm-button {
   padding: 5rpx 5rpx;
   width: 200rpx;
+  height: 60rpx;
   font-size:35rpx;
-  line-height:70rpx;
+  line-height:50rpx;
+  margin-bottom: 10rpx;
 }
 
 
