--- a/weui.wxss
+++ b/weui.wxss
@@ -5,7 +5,7 @@
  */
 page {
   line-height: 1.6;
-  font-family: -apple-system-font, Helvetica Neue, sans-serif
+  font-family: -apple-system-font, Helvetica Neue, sans-serif;
 }
 
 icon {
@@ -63,7 +63,7 @@ icon {
 }
 
 .weui-cell {
-  padding: 10px 15px;
+  padding: 5px 5px;
   position: relative;
   display: -webkit-box;
   display: -webkit-flex;
@@ -71,6 +71,7 @@ icon {
   -webkit-box-align: center;
   -webkit-align-items: center;
   align-items: center;
+  right: 8px;
   
 }
 
@@ -219,8 +220,10 @@ icon {
 }
 
 .weui-textarea {
-  display: block;
+  display: flex;
   width: 100%;
+  font-size: 15px;
+  left: 10px;
 }
 
 .weui-textarea-counter {
@@ -751,7 +754,7 @@ icon {
 .weui-grid {
   position: relative;
   float: left;
-  padding: 20px 10px;
+  padding: 10px 10px;
   width: 33.33333333%;
   box-sizing: border-box;
   border-right: 1rpx solid #d9d9d9;
@@ -935,8 +938,9 @@ icon {
 }
 
 .weui-media-box {
-  padding: 15px;
-  position: relative
+  padding: 10px;
+  position: relative;
+  line-height: 0;
 }
 
 .weui-media-box:before {
