--- a/app.wxss
+++ b/app.wxss
@@ -55,3 +55,21 @@ background:#d9d9d9 !important;
   text-overflow: ellipsis;
   overflow: hidden
 }
+.flexBox {
+  display: -webkit-flex;
+  display: flex;
+  -webkit-flex-flow: row;
+  flex-flow: row;
+  -webkit-flex-wrap: nowrap;
+  flex-wrap: nowrap;
+  width: 80%;
+  margin: 2px auto;
+  font-size: 16px;
+  /* background-color: #9CF; */
+}
+
+.flexBox .item1 {
+  -webkit-flex: 1;
+  flex: 1;
+  /* background: #ff9900; */
+}
