--- a/pages/myorder/myorder.wxml
+++ b/pages/myorder/myorder.wxml
@@ -4,8 +4,10 @@
       <view class="orderlog">订 单 记 录</view>
       <view wx:for="{{list}}" wx:for-index="index" wx:for-item="itemName" wx:key="index"w>
         <view class="order">id{{itemName.order_id}}-{{itemName.table_name}}-日期:{{itemName.order_time}}，总价:{{itemName.total_price}}元</view>
-        <view wx:for="{{itemName.detail}}" wx:for-index="index" wx:for-item="itemFoods" wx:key="id" > 
-           <view class="item">{{itemFoods.food.food_name}}:   {{itemFoods.num}}份   单价￥{{itemFoods.food.price|Int}}</view>
+        <view class="flexBox" wx:for="{{itemName.detail}}" wx:for-index="index" wx:for-item="itemFoods" wx:key="id" > 
+           <view class="item1">{{itemFoods.food.food_name}}</view>
+           <view class="item2">{{itemFoods.num}}份</view>
+           <view class="item3">单价￥{{itemFoods.food.price|Int}}</view>
         </view>
       </view>
     </scroll-view>
