--- a/pages/myorder/myorder.wxss
+++ b/pages/myorder/myorder.wxss
@@ -2,21 +2,46 @@
 .container1 {
   display: flex;
   flex-direction: column;
-  align-items: left;
+  align-items: center;
   justify-content: space-between;
   box-sizing: border-box;
   font-size: 15px;
+  /* width: 90%; */
 } 
 .order {
   text-align: left;
-  margin-left: 5px;
-}
-.item {
-  font-size: 14px;
   margin-left: 20px;
-  color: #777;
 }
 .orderlog {
   font-size: 18px;
   text-align: center;
+}
+.flexBox {
+  display: -webkit-flex;
+  display: flex;
+  -webkit-flex-flow: row;
+  flex-flow: row;
+  -webkit-flex-wrap: nowrap;
+  flex-wrap: nowrap;
+  width: 80%;
+  margin: 2px auto;
+  font-size: 14px;
+  color: rgb(112, 112, 112);
+  /* background-color: #9CF; */
+}
+
+.flexBox .item1 {
+  -webkit-flex: 2.5;
+  flex: 2.5;
+  /* background: #ff9900; */
+}
+.flexBox .item2 {
+  -webkit-flex: 1;
+  flex: 1;
+  /* background: #ff9900; */
+}
+.flexBox .item3 {
+  -webkit-flex: 2;
+  flex: 2;
+  /* background: #ff9900; */
 }
