--- a/pages/shop/shop.wxml
+++ b/pages/shop/shop.wxml
@@ -10,13 +10,31 @@
 
   </view>
   <view class="top-view" wx:if="{{showLogin}}">
-    <view>今日预订桌数：{{totalprice}}桌</view> 
-    <view>今日收入共计：{{totalprice}}元</view> 
-    <view>本周预订桌数：{{totalprice}}桌</view> 
-    <view>本周收入共计：{{totalprice}}元</view> 
-    <button bindtap="weekly_dish_sales">本周热销菜品</button> 
-    <view wx:for="{{hotdish}}" wx:key="index" wx:for-item="item" >
-          菜名：{{item.food__name}},  共销售{{item.sales_count}}份。
+    <!-- <view style="text-align: center; font-size: 18px;">经营数据统计</view> -->
+    <button class="button1" type="default" bindtap="sales" data-args="{{ {days: '1'} }}">今日经营数据</button> 
+    <view class="flexBox">
+      <view class="item1">今日预订桌数: </view> <view class="item1">{{today_tablenum}}桌</view> 
+    </view> 
+    <view class="flexBox">
+      <view class="item1">今日收入共计: </view> <view class="item1">{{today_totalprice}}元</view> 
+    </view>
+    <button class="button1" type="default" bindtap="sales" data-args="{{ {days: '7'} }}">本周经营数据</button> 
+    <view class="flexBox">
+      <view class="item1">本周预订桌数: </view> <view class="item1">{{week_tablenum}}桌</view> 
+    </view>
+    <view class="flexBox">
+      <view class="item1">本周收入共计: </view> <view class="item1">{{week_totalprice}}元</view> 
+    </view>
+    <view class="flexBox">
+      <view class="item1">平均每桌价格: </view> <view class="item1">{{average_price}}元</view> 
+    </view>
+    <view>
+      <button class="button1" type="default" bindtap="weekly_dish_sales">本周热销排行</button> 
+      <view wx:for="{{hotdish}}" wx:key="index" wx:for-item="item" >
+        <view class="flexBox">
+          <view class="item1">{{item.food__name}}</view> <view class="item1">共销售{{item.total_sales}}份</view> 
+        </view>
+      </view>
     </view>
   </view>
 </view>
